# simplelog

./: .gitignore  azure_utils.py  cloudflare_utils.py  cloudwatch.py  creds_store.py  datadog_utils.py  docker_utils.py  elastic_utils.py  flyio_utils.py  gcp_utils.py  i18n.py  install.sh  kubernetes_utils.py  loki_utils.py  profiles_store.py  pyproject.toml  railway_utils.py  requirements.txt  simplelog.spec  ssh_utils.py  ui.py  vercel_utils.py  version.py  workers.py
.github/workflows/: release.yml
design_handoff_remote/: README.md  simplelog-remote.html
html/: index.html
tests/: test_cloudflare_utils.py  test_cloudwatch.py  test_creds_store.py  test_datadog_utils.py  test_docker_utils.py  test_elastic_utils.py  test_flyio_utils.py  test_kubernetes_utils.py  test_loki_utils.py  test_profiles_store.py  test_railway_utils.py  test_vercel_utils.py  test_workers_extended.py
